# world-champ-2022

./: build.sh  custom_sql.py  pyproject.toml  render.yaml
world_champ_2022/: manage.py
world_champ_2022/assets/: https--ru.uefa.com-uefaeuro-2020-.url
world_champ_2022/assets/css/: footer.css  mystyles_worldchamp_14_06_2018.css  print.css  pure-min.css  style.css  style_9f542ca6.css
world_champ_2022/assets/previews/: Untitled-1.psd
world_champ_2022/gambling/: admin.py  forms.py  models.py  urls.py  views.py
world_champ_2022/gambling/migrations/: 0001_initial.py
world_champ_2022/gambling/templates/gambling/: charts.html  gambling_list.html  index.html  news.html  stats.html  tournament.html
world_champ_2022/gambling/templates/gambling/includes/: future_matches_table.html  past_matches_table.html
world_champ_2022/locale/ru/LC_MESSAGES/: django.po
world_champ_2022/templates/: 1.html  2.html  charts.html  euro2016.html  euro2020.html  home.html  layout.html  layout_base.html  layout_unauth.html  news.html  stats.html  tournament.html  updates.html  world2014.html  world2018.html
world_champ_2022/templates/allauth/: base.html
world_champ_2022/templates/allauth/account/: base.html  login.html
world_champ_2022/templates/includes/: layout.html  layout_base.html  layout_unauth.html  navbar.html  playoff_grid.html
world_champ_2022/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
world_champ_2022/world_champ_2022/: asgi.py  settings.py  urls.py  views.py  wsgi.py
