[tool.poetry]
name = "world-champ-2022"
version = "0.1.0"
description = ""
authors = ["Konstantin Aladyshev <aladyshev22@gmail.com>"]
readme = "README.md"
packages = [{include = "world_champ_2022"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "3.2"
dj-database-url = "0.5.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
